create: header html + css

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,7 +1,15 @@
 *, *::before, *::after
   box-sizing: border-box
+html
+  background-color: $light
+  color: $dark-text
+  font-family: 'Montserrat', sans-serif
 img
   max-width: 100%
 .container
   max-width: 1140px
   margin: 0 auto
+.row 
+  display: flex
+  align-items: center
+  justify-content: space-between
