--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,12 @@ template {
           box-sizing: border-box;
 }
 
+html {
+  background-color: #ffffff;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
+}
+
 img {
   max-width: 100%;
 }
@@ -353,4 +359,77 @@ img {
 .container {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header {
+  padding: 20px 0;
+}
+
+.header__logo {
+  width: 100px;
+}
+
+.header-nav {
+  margin: auto;
+}
+
+.header-nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+}
+
+.header-nav__item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.header-nav__link {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 500;
+}
+
+.header__order-button {
+  margin-right: 15px;
+  padding: 12px 16px;
+  min-width: 120px;
+  font-size: 14px;
+  font-weight: 600;
+  border: 2px solid #00A1C2;
+  color: #00A1C2;
+  border-radius: 4px;
+  background-color: #e6fbff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.contacts-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.contacts-group__item {
+  color: inherit;
 }
