--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,14 +12,14 @@
       list-style: none
     &__item 
       &:not(:last-child)
-        margin-right: 16px
+        margin-right: 20px
     &__link
       text-decoration: none
       color: inherit
       font-weight: 500
   &__order-button
     // margin-left: auto
-    margin-right: 15px
+    margin-left: 15px
     padding: 12px 16px
     min-width: 120px
     font-size: 14px
