--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,10 +1,69 @@
 .hero
+  padding: 30px 0
   &-slider
-    width: 800px
     &__slide
       display: flex
-  &__text
-    margin-top: 50px
+      align-items: center
+      justify-content: space-evenly
+      position: relative
+      // width: 80%
+      &::before
+        content: ''
+        position: absolute
+        display: block
+        height: 100%
+        width: 100%
+        top: 0
+        right: 0
+        bottom: 0
+        left: 0
+        // background: transparent
+        background-image: linear-gradient(0deg, #b9deed, #efefef)
+        opacity: 0.1
+        z-index: 99
+    &__btn
+      height: 50px
+      width: 50px
+      &::after
+        content: ''
+        height: 50px
+        width: 50px
+        border-radius: 50%
+        background-color: rgba(darken($primary, 25%), 0.7)
+      &--next
+        &::after
+          background-image: url(../img/arrow-right.svg)
+          background-repeat: no-repeat
+          background-position: center
+      &--prev
+        &::after
+          background-image: url(../img/arrow-left.svg)
+          background-repeat: no-repeat
+          background-position: center
+  &__title
+    position: absolute
+    margin: 0
+    max-width: 350px
+    padding: 20px 25px
+    background-color: rgba(darken($primary, 25%), 0.7)
+    display: inline-block
+    right: 0
+    bottom: 100px
+    z-index: 5
+    border-radius: 20px 0 0 20px
+    font-size: 36px
+    line-height: 160%
+    // letter-spacing: -1px
+    color: $light
+    font-weight: 500
+  &__description
+    margin: 0
+    font-size: 26px
+  &__image
+    height: 700px
+    object-fit: cover
+    position: relative
+
 .socials
   &-wrapper
     display: flex
