added: hero adaptive to tablets

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,8 +9,10 @@ img
 .container
   max-width: 1140px
   margin: 0 auto
+  width: 95%
 .row 
   display: flex
   align-items: center
   justify-content: space-between
   position: relative
+  
