--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -16,3 +16,13 @@ img
   justify-content: space-between
   position: relative
   
+.button
+  padding: 12px 16px
+  font-size: 14px
+  font-weight: 600
+  border: 2px solid $primary
+  color: $primary
+  border-radius: 4px
+  background-color: $primary-light
+  text-transform: uppercase
+  cursor: pointer
