--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-  padding: 10px 0 30px 0
+  padding: 0
   // height: 60vh
   &-slider
     // height: 700px
@@ -46,29 +46,40 @@
   &__title
     position: absolute
     margin: 0
-    max-width: 350px
+    max-width: 370px
     padding: 20px 25px
     background-color: rgba(darken($primary, 25%), 0.7)
     display: inline-block
     right: 0
     bottom: 10%
-    z-index: 5
+    z-index: 99
     border-radius: 20px 0 0 20px
     font-size: 36px
-    line-height: 160%
+    line-height: 150%
     // letter-spacing: -1px
     color: $light
     font-weight: 500
+    text-align: left
   &__description
     margin: 0
     font-size: 26px
   &__image
-    height: calc(100vh - 191px)
+    height: calc(100vh - 151px)
     // max-height: 600px
     // min-height: 500px
     width: 100%
     object-fit: cover
     position: relative
+  &__button
+    padding: 10px 28px
+    text-transform: uppercase
+    background-color: $primary-light
+    border: 2px solid $primary
+    border-radius: 4px
+    width: 95%
+    font-size: 26px
+    margin-top: 20px
+
 
 .socials
   &-wrapper
