--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,15 +16,16 @@
         margin-left: auto
   .hero
     &__image
-      height: calc(100vh - 109px)
+      height: calc(100vh - 180px)
 @media screen and ( max-width: 767px )
   .header
     padding: 10px 0
     &__logo
       width: 50px
-    &__order-button
+    &__contacts-group
       display: none
   .hero
+    padding-top: 0
     &__title
       font-size: 24px
       max-width: 260px
@@ -34,7 +35,7 @@
       margin-top: 10px
       font-size: 18px
     &__image
-      height: calc(100vh - 78px)
+      height: calc(100vh - 140px)
 @media screen and ( max-width: 640px )
   .hero
     &__title
