--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -1,5 +1,7 @@
 .hero
-  padding: 0
+  // padding: 0
+  padding-top: 10px
+  padding-bottom: 30px
   // height: 60vh
   &-slider
     // height: 700px
@@ -64,7 +66,7 @@
     margin: 0
     font-size: 26px
   &__image
-    height: calc(100vh - 151px)
+    height: calc(100vh - 221px)
     // max-height: 600px
     // min-height: 500px
     width: 100%
