--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,7 +15,9 @@ img
   align-items: center
   justify-content: space-between
   position: relative
-  
+.logo
+  display: flex
+  align-items: center
 .button
   padding: 12px 16px
   font-size: 14px
