--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -28,3 +28,16 @@ img
   background-color: $primary-light
   text-transform: uppercase
   cursor: pointer
+.socials
+  &-wrapper
+    display: flex
+    flex-direction: column
+    align-items: center
+    position: absolute
+    right: 0
+    bottom: 0
+    z-index: 5
+  &-link
+    margin-top: 10px
+  &-icon
+    width: 30px
