--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -23,7 +23,7 @@
         bottom: 0
         left: 0
         // background: transparent
-        background-image: linear-gradient(0deg, #b9deed, #efefef)
+        background-image: linear-gradient(0deg, #0d171b, #efefef)
         opacity: 0.1
         z-index: 99
     &__btn
