--- a/sass/templates/_about-us.sass
+++ b/sass/templates/_about-us.sass
@@ -4,14 +4,15 @@
   &__container
     background: url("../img/about-us/cake.png") no-repeat
     background-position: right center
-    background-size: 400px
+    background-size: 550px
   &__section-title
     margin-bottom: 20px
     color: $primary
   &__text
-    max-width: 700px
+    max-width: 500px
     margin-bottom: 20px
     line-height: 140%
+    font-size: 16px
     &:last-of-type
       margin-bottom: 30px
   &__info
@@ -23,6 +24,7 @@
       flex-wrap: wrap
       max-height: 150px
       max-width: 650px
+      margin-bottom: 0
     &-item
       display: flex
       align-items: center
