--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,7 +4,17 @@
       font-size: 30px
       line-height: 150%
       max-width: 320px
+@media screen and ( max-width: 1200px )
+  .container
+    max-width: 940px
+  .about-us
+    &__container
+      background-size: 400px
+    &__text
+      font-size: 14px    
 @media screen and ( max-width: 992px )
+  .container
+    max-width: 740px
   .header
     padding: 15px 0
     &__logo
@@ -17,7 +27,23 @@
   .hero
     &__image
       height: calc(100vh - 180px)
+  .about-us
+    &__container
+      background-size: 350px
+      background-position: top 50px right
+    &__text
+      max-width: 400px
+      // &:first-of-type
+      //   max-width: 350px
+      &:nth-of-type(1)        
+        max-width: 350px
+      &:nth-of-type(2)        
+        max-width: 350px
+      &:last-of-type
+        max-width: 600px
 @media screen and ( max-width: 767px )
+  .container
+    max-width: 540px
   .header
     padding: 10px 0
     &__logo
@@ -36,16 +62,58 @@
       font-size: 18px
     &__image
       height: calc(100vh - 140px)
+  .about-us
+    &__container
+      background: none
+    &__row
+      display: flex
+      align-items: center
+      justify-content: space-between
+    &__info
+      &-list
+        max-height: none
+        justify-content: space-between
+        max-height: 340px
+        // margin-top: 70px
+      &-item
+        margin-bottom: 30px
+        &:last-of-type
+          margin-bottom: 0
+    &__text
+      &:nth-of-type(n)        
+        max-width: 300px
 @media screen and ( max-width: 640px )
+  .container
+    width: 90%
   .hero
     &__title
       font-size: 32px
       max-width: 340px
+  .about-us
+    &__row
+      flex-direction: column
+      align-items: stretch
+    &__info
+      &-list
+        max-height: 200px
+      &-item
+        // width: 48%
+        font-size: 14px
+    &__text
+      &:nth-of-type(n)        
+        max-width: none
 @media screen and ( max-width: 460px )
-  .hero
-    &__title
-      font-size: 24px
-      max-width: 270px
-  
+  .section-title
+    font-size: 32px
+  .about-us
+    &__row
+      align-items: center
+    &__info
+      &-list
+        max-height: none
+      &-item
+        font-size: 16px
+        font-weight: 500
+
   
   
