--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -18,6 +18,8 @@
       text-decoration: none
       color: inherit
       font-weight: 500
+      border-bottom: 2px solid transparent
+      transition: all 0.5s
   &__order-button
     // margin-left: auto
     margin-left: 15px
