--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -41,6 +41,13 @@
         max-width: 350px
       &:last-of-type
         max-width: 600px
+@media screen and ( min-width: 992px )
+  .header
+    &-nav
+      &__link
+        &:hover
+          border-bottom: 2px solid $primary
+          // transition: all 1s
 @media screen and ( max-width: 767px )
   .container
     max-width: 540px
