--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -10,6 +10,7 @@ img
   max-width: 1140px
   margin: 0 auto
   width: 95%
+  position: relative
 .row 
   display: flex
   align-items: center
@@ -31,14 +32,14 @@ img
 .socials
   &-wrapper
     display: flex
-    flex-direction: column
+    // flex-direction: column
     align-items: center
     position: absolute
     right: 0
-    bottom: 0
+    top: 0
     z-index: 5
   &-link
-    margin-top: 10px
+    margin-left: 20px
   &-icon
     width: 30px
 .section
