--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -41,6 +41,11 @@
         max-width: 350px
       &:last-of-type
         max-width: 600px
+  .socials
+    &-wrapper
+      left: 200px
+    &-icon
+      width: 25px
 @media screen and ( min-width: 992px )
   .header
     &-nav
@@ -109,9 +114,20 @@
     &__text
       &:nth-of-type(n)        
         max-width: none
+  .socials
+    &-wrapper
+      top: 20px
+      left: auto
+      right: 0
+    &-icon
+      width: 20px
 @media screen and ( max-width: 460px )
   .section-title
     font-size: 32px
+  .hero
+    &__title
+      font-size: 28px
+      max-width: 300px
   .about-us
     &__row
       align-items: center
@@ -121,6 +137,10 @@
       &-item
         font-size: 16px
         font-weight: 500
-
+  .socials
+    &-wrapper
+      top: 10px
+    &-icon
+      width: 20px
   
   
