--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -35,8 +35,8 @@ img
     // flex-direction: column
     align-items: center
     position: absolute
-    right: 0
-    top: 0
+    left: 350px
+    top: 15px
     z-index: 5
   &-link
     margin-left: 20px
