--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -134,7 +134,13 @@
     &__info
       &-list
         max-height: none
+        flex-direction: row
+      &-icon
+        margin-right: 0
+        margin-bottom: 10px
       &-item
+        flex-basis: 50%
+        flex-direction: column
         font-size: 16px
         font-weight: 500
   .socials
