added hovers for buttons and contats

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -53,6 +53,16 @@
         &:hover
           border-bottom: 2px solid $primary
           // transition: all 1s
+  .contacts
+    &-group
+      &__item
+        &:hover
+          color: $primary
+  .button
+    transition: all 0.3s
+    &:hover
+      color: $primary-dark
+      border-color: $primary-dark
 @media screen and ( max-width: 767px )
   .container
     max-width: 540px
