--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -2,3 +2,4 @@ $light: #ffffff
 $primary: #00A1C2
 $dark-text: #333333
 $primary-light: lighten($primary, 59.5%)
+$primary-dark: darken($primary, 15%)
