--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -43,6 +43,8 @@ img
   &-icon
     width: 30px
 .section
+  padding: 40px 0 30px
   &-title
+    color: $primary
     font-size: 42px
     margin: 0
