--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -45,6 +45,6 @@ img
 .section
   padding: 40px 0 30px
   &-title
-    color: $primary
+    color: $primary-dark
     font-size: 42px
     margin: 0
