--- a/sass/templates/_delivery.sass
+++ b/sass/templates/_delivery.sass
@@ -12,9 +12,24 @@
       max-width: 700px
   &__text
     margin-bottom: 30px
+    &-list
+      margin: 0
+      margin-bottom: 20px
+      padding-left: 0
+      list-style: none
+      &-item
+        &::before
+          content: "\2022"
+          color: $primary-dark
+          font-weight: bold;
+          display: inline-block
+          width: 18px;
+          font-size: 24px
+          // margin-left: -1em
   &__list
     list-style: none
     padding: 0
+    margin: 0
     display: flex
     flex-direction: column
     min-height: 400px
@@ -23,33 +38,30 @@
       // margin-bottom: 40px
       display: flex
       align-items: flex-start
+      flex-direction: column
       // color: $primary-dark
       &-text
-        max-width: 350px
+        // max-width: 350px
         display: flex
-        flex-direction: column
         align-items: center
-        margin: auto
+        margin-bottom: 10px
       &-title
-        margin-top: 0
-        margin-bottom: 14px
+        margin: 0
         font-size: 20px
         color: $primary-dark
       &-number
-        display: inline-flex
+        display: flex
         align-items: center
         justify-content: center
-        height: 50px
-        width: 50px
+        height: 40px
+        width: 40px
         border: 2px solid $primary-dark
         border-radius: 50%
-        font-size: 24px
+        font-size: 22px
         font-weight: 500
         color: $primary-dark
         margin-right: 20px
       &-description
         display: block
-        text-align: center
-        font-style: normal
         font-weight: normal
-      
+        max-width: 300px
