--- a/sass/templates/_delivery.sass
+++ b/sass/templates/_delivery.sass
@@ -12,12 +12,14 @@
       max-width: 700px
   &__text
     margin-bottom: 30px
+    line-height: 140%
     &-list
       margin: 0
       margin-bottom: 20px
       padding-left: 0
       list-style: none
       &-item
+        line-height: 140%
         &::before
           content: "\2022"
           color: $primary-dark
@@ -65,3 +67,8 @@
         display: block
         font-weight: normal
         max-width: 300px
+  &__b2b
+    &-file
+      text-decoration: none
+      display: inline-block
+
