--- a/css/style.css
+++ b/css/style.css
@@ -1369,6 +1369,7 @@ button.swiper-pagination-bullet {
 
 .delivery__text {
   margin-bottom: 30px;
+  line-height: 140%;
 }
 
 .delivery__text-list {
@@ -1376,6 +1377,10 @@ button.swiper-pagination-bullet {
   margin-bottom: 20px;
   padding-left: 0;
   list-style: none;
+}
+
+.delivery__text-list-item {
+  line-height: 140%;
 }
 
 .delivery__text-list-item::before {
@@ -1457,6 +1462,11 @@ button.swiper-pagination-bullet {
   display: block;
   font-weight: normal;
   max-width: 300px;
+}
+
+.delivery__b2b-file {
+  text-decoration: none;
+  display: inline-block;
 }
 
 @media screen and (max-width: 1400px) {
