--- a/sass/_swiper-bundle.scss
+++ b/sass/_swiper-bundle.scss
@@ -18,7 +18,7 @@
   font-style: normal;
 }
 :root {
-  --swiper-theme-color: #007aff;
+  --swiper-theme-color: #00a1c2;
 }
 .swiper-container {
   margin-left: auto;
@@ -144,7 +144,7 @@
   scroll-snap-type: y mandatory;
 }
 :root {
-  --swiper-navigation-size: 44px;
+  --swiper-navigation-size: 22px;
 }
 .swiper-button-next,
 .swiper-button-prev {
