--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -134,6 +134,9 @@
         // align-items: center
         &-description
           max-width: 100%
+  .reviews
+    &__text
+      font-size: 14px
 @media screen and ( max-width: 640px )
   .container
     width: 90%
@@ -188,5 +191,8 @@
       top: 10px
     &-icon
       width: 20px
+  .reviews
+    &__text
+      font-size: 14px
   
   
