--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,16 @@
       &-block
         max-width: 600px
 @media screen and ( max-width: 1200px )
+  .header
+    &-nav
+      &__link
+        font-size: 14px
+      &__item
+        &:not(:last-child)
+          margin-right: 15px
+  .contacts-group
+    &__item
+      font-size: 12px
   .container
     max-width: 940px
   .about-us
