--- a/sass/templates/_about-us.sass
+++ b/sass/templates/_about-us.sass
@@ -1,5 +1,5 @@
 .about-us
-  padding: 40px 0 30px
+  // padding: 40px 0 30px
   background-color: $primary-light
   &__container
     background: url("../img/about-us/cake.png") no-repeat
@@ -32,3 +32,6 @@
       height: 50px
       margin-right: 20px
       // width: auto
+  &__socials
+    left: 350px
+    top: 15px
